# price_tracker

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
apps/abstracts/: models.py
apps/auths/: admin.py  forms.py  models.py
apps/auths/migrations/: 0001_initial.py
settings/: base.py  urls.py
settings/deploy/: asgi.py  wsgi.py
